# overfloat

./: .gitignore  README.md  index.html  package.json  tsconfig.json
config/: config.json  profiles.json
installers/windows/: overfloat_1.0.0_x64_en-US.msi
overfloat/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
overfloat/config/: config.json  profiles.json
overfloat/src/: App.tsx  main.tsx
overfloat/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
overfloat/src-tauri/src/: fswatch.rs  inputsim.rs  keybinds.rs  main.rs
overfloat_modules/Clipboard_Tester/: ClipboardTester.tsx
overfloat_modules/FSWatch_Tester/: FSWatchTester.tsx
overfloat_modules/FS_Tester/: FSTester.tsx
overfloat_modules/InputSim_Tester/: InputSimTester.tsx
overfloat_modules/Keybind_Tester/: KeybindTester.tsx
overfloat_modules/PoE_Trade/: PoE_Trade.tsx
overfloat_modules/central/: central.tsx
overfloat_modules/file_watcher/: file_watcher.tsx
overfloat_modules/test_module/: test.tsx
src/: App.tsx  Overfloat.tsx  main.tsx
src-tauri/: Cargo.toml  Test  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: filewatch.rs  fswatch.rs  inputsim.rs  keybinds.rs  main.rs  old_fswatch.rs
src/Api/: InputSimulation.ts  InputSimulation.tsx  ModuleWindow.css  ModuleWindow.tsx  TitleBar.tsx  api.ts
src/components/: EventDistributor.tsx  EventHandler.ts  KeybindWindow.tsx  ModuleDisplay.tsx  ModuleKeybindDisplay.tsx  ModuleManager.ts  ModuleTrayHandler.tsx  ModuleWindow.tsx  OverfloatModule.ts  central.tsx  counter.tsx
src/services/: InputSimulation.tsx  TitleBar.css  TitleBar.tsx  api.ts
src/utils/: KeybindEventHandler.ts  (+5 more)
(+231 files in other folders)
